--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-        ../.DS_Store
-        ../VMFIVE_2024_Frontend_Assignment.pdf
-        ./
-        ../film-demo.mp4
-        ../spinning-demo.mp4
+../.DS_Store
+../VMFIVE_2024_Frontend_Assignment.pdf
+../film-demo.mp4
+../spinning-demo.mp4
+film/.DS_Store
+spinning/.DS_Store
